# e9571-config-reader-haskell

./: CHANGELOG.md  LICENSE  README.md  config.json  e9571-config-reader-haskell.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: e9571-config-reader-haskell-0.1.0.0-inplace.conf  package.cache
dist-newstyle/tmp/src-3071/vector-0.13.2.0/: vector.cabal
examples/: Simple.hs
src/E9571/: ConfigReader.hs
