cabal-version:  2.2
name:           e9571-config-reader-haskell
version:        0.1.0.0
synopsis:       Automatically read config.json from the current directory
description:    Zero-configuration JSON config loader
homepage:       https://github.com/e9571/e9571-config-reader-haskell
license:        MIT
license-file:   LICENSE
author:         e9571
maintainer:     95714623@qq.com
category:       Configuration
build-type:     Simple
extra-source-files: README.md config.json
data-files:     config.json

library
  exposed-modules:     E9571.ConfigReader
  hs-source-dirs:      src
  build-depends:
      base >= 4.14 && < 5
    , aeson >= 2.0 && < 2.3
    , bytestring          
    , directory           
  default-language:    Haskell2010
  ghc-options:        -Wall

executable simple-example
  main-is:             Simple.hs
  hs-source-dirs:      examples
  build-depends:
      base >= 4.14 && < 5
    , aeson
    , e9571-config-reader-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall