cabal-version:  2.2
name:           e9571-config-reader-haskell
version:        0.1.0.2
synopsis:       Automatically read config.json from the current directory
description:    Automatically discover and parse a config.json file in the current working directory
    or any of its parent directories. No need to manually pass file paths. Built on top
    of aeson, it provides a simple `getConfig :: FromJSON a => IO a` function that also
    supports default values when fields are missing in the JSON file.
homepage:       https://github.com/e9571/e9571-config-reader-haskell
license:        MIT
license-file:   LICENSE
author:         e9571
maintainer:     95714623@qq.com
category:       Configuration
build-type:     Simple
extra-source-files: README.md config.json
data-files:     config.json
common shared-options
  default-language: Haskell2010
  ghc-options:      -Wall

library
  exposed-modules:     E9571.ConfigReader
  hs-source-dirs:      src
  build-depends:
      base >= 4.14 && < 5
    , aeson >= 2.0 && < 2.3
    , bytestring >= 0.10 && < 0.13     
    , directory  >= 1.3  && < 1.4         
  default-language:    Haskell2010
  ghc-options:        -Wall

executable simple-example
  main-is:             Simple.hs
  hs-source-dirs:      examples
  build-depends:
      base >= 4.14 && < 5
    , aeson
    , e9571-config-reader-haskell
  default-language:    Haskell2010
  ghc-options:         -Wall